typescript/checker/tests/conformance/parser/ecmascript5/VariableDeclarations/parserVariableDeclaration2.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            122,
        ),
        hi: BytePos(
            127,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/VariableDeclarations/parserVariableDeclaration2.ts:8:9
  |
8 |         MUnit.test(a);
  |         ^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            133,
        ),
        hi: BytePos(
            134,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/VariableDeclarations/parserVariableDeclaration2.ts:8:20
  |
8 |         MUnit.test(a);
  |                    ^

